<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/age"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:background="?attr/colorOutlineVariant"
        android:gravity="center"
        android:text="@string/age"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="?attr/colorOutlineVariant"
        android:gravity="center"
        android:text="@string/status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <TextView
        android:id="@+id/bmiScore"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="?attr/colorOutlineVariant"
        android:gravity="center"
        android:text="@string/bmi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454"
        tools:ignore="VisualLintOverlap" />

    <Button
        android:id="@+id/showBTN"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/show"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.249"
        tools:ignore="VisualLintButtonSize" />

    <EditText
        android:id="@+id/heightND"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_cm"
        android:inputType="numberDecimal"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148"
        tools:ignore="LabelFor,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/ageND"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_age"
        android:inputType="numberDecimal"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148"
        tools:ignore="LabelFor,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/height"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:background="?attr/colorOutlineVariant"
        android:gravity="center"
        android:text="@string/height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/weightND"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_kg"
        android:inputType="numberDecimal"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148"
        tools:ignore="LabelFor,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:background="?attr/colorOutlineVariant"
        android:gravity="center"
        android:text="@string/weight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        tools:ignore="TextSizeCheck" />

    <!-- custom xml -->

    <com.example.bmi.BmiGaugeView
        android:id="@+id/bmiGaugeView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.914" />

</androidx.constraintlayout.widget.ConstraintLayout>